fix: added pointer cursor and aligned coloring

--- a/packages/eyevinn-skin/src/components/buttons/audioTrack/audioTrack.module.css
+++ b/packages/eyevinn-skin/src/components/buttons/audioTrack/audioTrack.module.css
@@ -43,6 +43,7 @@
 
 .list label span {
 	color: rgba(255, 255, 255, 0.8);
+	cursor: pointer;
 }
 
 .list :checked + span {
